# articraft

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXTERNAL_AGENT_DATA.md  NOTICE  README.md  SECURITY.md  justfile  package-lock.json  package.json  pyproject.toml  scaffold.py  scaffold_hybrid.py  scaffold_hybrid_lite.py  scaffold_lite.py  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
agent/: __init__.py  batch_runner.py  compiler.py  cost.py  defaults.py  edit.py  examples.py  feedback.py  harness.py  harness_codec.py  harness_compile.py  harness_guidance.py  models.py  mp_utils.py  open_file_limits.py  payload_preview.py  prompts.py  record_persistence.py  rerun.py  run_config.py  run_context.py  runner.py  runner_cli.py  runtime.py  runtime_limits.py  session.py  single_run.py  traces.py  workspace_docs.py
agent/prompting/: __init__.py  compile.py
agent/prompts/: __init__.py  compile.py  loader.py  spec.py
agent/providers/: __init__.py  anthropic.py  base.py  compaction_policy.py  factory.py  gemini.py  gemini_codec.py  openai.py  openai_codec.py  openrouter.py
agent/tools/: __init__.py  apply_patch.py  base.py  code_region.py  compile_model.py  edit_code.py  find_examples.py  read_code.py  read_file.py  registry.py  write_code.py
agent/tui/: __init__.py  batch_run.py  components.py  formatters.py  single_run.py
articraft/: values.py
cli/: common.py  compile_all.py  compile_record.py  dataset.py  env.py  external.py  hooks.py  main.py  pre_commit.py  workbench.py
data/: CATEGORY_PROMPT_GUIDE.md  CATEGORY_PROMPT_WRITING_GUIDANCE.md  CATEGORY_SELECTION_REQUIREMENTS.md  REJECTED_CATEGORIES.md  supercategories.json
data/batch_specs/: 20260322_backfill_under3_gpt54_high.csv  20260325_backfill_part3_gpt54_high.csv  20260325_sdk_hybrid_fill_to_4_gpt54_medium.csv  20260325_sdk_hybrid_mechanical_10x_gpt54_high.csv  20260325_sdk_hybrid_mechanical_1x_gpt54_high.csv  20260326_base_sdk_categories_part2_prompts.csv  20260326_range_hood_with_articulated_controls_50_prompts.csv  20260326_stove_top_50_prompts.csv  20260327_sdk_hybrid_categories_realism_gpt54_high.csv  20260328_base_sdk_categories_part2_prompts.csv  20260328_base_sdk_categories_part2_prompts_round3.csv  20260328_sdk_hybrid_backfill_to_7_gpt54_high.csv  20260329_base_sdk_categories_part2_prompts_round4.csv  20260329_sdk_hybrid_realism_backfill_to_10_gpt54_high.csv  20260330_sdk_hybrid_fill_to_15_gpt54_high.csv  20260331_sdk_hybrid_fill_to_20_gpt54_high.csv  20260331_sdk_hybrid_weighted_easy_100_gpt54_high.csv  20260401_ray_exploring_new_categories.csv  20260401_sdk_hybrid_one_each_gpt54_high.csv  20260402_base_sdk_categories_part2_plus_new_categories_round5.csv  20260402_sdk_misc_backfill_8cats_10each_gpt54_high.csv  20260403_sdk_hybrid_rebalanced_to_1500_gpt54_high.csv  20260404_stand_mixer_40_gpt54_high.csv  20260406_backfill_part3_gpt54_high_15.csv  20260407_generic_new_categories_gpt54_high.csv  20260409_newly_added_categories_20each_gpt54_high.csv  20260410_base_sdk_backfill_6cats_fill_to_10_gpt54_high.csv  20260410_fidget_toy_10_gpt54_high.csv  20260411_air_conditioning_machine_15_gpt54_high.csv  20260411_desktop_monitor_with_tilt_swivel_stand_5_gpt54_high.csv  20260411_desktop_pencil_sharpener_plus5_gpt54_high.csv  20260411_desktop_stapler_plus5_gpt54_high.csv  20260411_desktop_stapler_rear_hinged_magazine_plus5_gpt54_high.csv  20260411_fill_to20_plus_diverse_exact500_gpt54_high.csv  20260411_home_appliance_categories_5each_gemini31pro_high.csv  20260411_home_appliance_categories_5each_gpt54_high.csv  20260411_home_appliance_categories_plus15_gpt54_high.csv  (+28 more)
dataset/: __init__.py  cli.py  manifests.py  models.py  service.py  store.py  tui.py  viewer.py
docs/: architecture.md  dataset_generation.md  record_editing.md
performance/: __init__.py  __main__.py  corpus.py  runner.py
prompting/: compile.py  spec.py
scripts/: backfill_compile_report_levels.py  backfill_gpt55_costs.py  backfill_link_names_via_openai.py  bootstrap_env.py  compile_all_records.py  git_hooks.py  materialize_record.py  migrate_final_10k.py  migrate_record_assets_paths.py  migrate_record_storage_split.py  migrate_record_trajectories.py  migrate_sdk_package_to_sdk.py  pre_commit_hooks.py  system_prompt_backfill_link_names.md  unroll_all_trajectories.py  unroll_trajectory.py
sdk/: __init__.py  _dependencies.py  _profiles.py
sdk_hybrid/: __init__.py  gears.py
sdk_internal/: __init__.py
storage/: __init__.py  batch_specs.py  categories.py  collections.py  data_validation.py  dataset_workflow.py  datasets.py  identifiers.py  layout.py  manifests.py  materialize.py  migrations.py  models.py  prompt_batches.py  queries.py  record_authors.py  records.py  repo.py  revisions.py  runs.py  search.py  supercategories.py  trajectories.py
store/: __init__.py  categories.py  collections.py  layout.py  manifests.py  materialize.py  prompt_batches.py  queries.py  records.py  repo.py
tests/: conftest.py  helpers.py  test_exact_collision_cleanup.py  test_values.py
workbench/: __init__.py  cli.py  models.py  service.py  store.py  tui.py
(+74843 files in other folders)
