[project]
name = "articraft"
version = "0.1.0"
description = "Agentic articulated object generation, dataset curation, and workbench tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "cadquery>=2.5",
    "fastapi>=0.111.0",
    "google-genai",
    "numpy>=2.4.1",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "manifold3d>=3.3.2",
    "trimesh>=4.11.3",
    "python-fcl>=0.7.0.8",
    "coacd>=1.0.7",
    "websockets>=15.0.1",
]

[project.scripts]
articraft-dataset = "cli.dataset:main"
articraft-workbench = "cli.workbench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "agent",
    "cli",
    "store",
    "viewer",
    "sdk",
    "sdk_hybrid",
]

[dependency-groups]
dev = []
